[package]
name = "sui-testsuite"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rayon = "1.5.2"
anyhow = { version = "1.0.57", features = ["backtrace"] }
bytes = "1.1.0"
futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
tempfile = "3.3.0"
tokio = { version = "1.17.0", features = ["full"] }
rand = "0.7.3"
toml = "0.5.9"
strum = "0.24.0"
strum_macros = "0.24.0"
num_cpus = "1.13.1"
base64ct = { version = "1.5.0", features = ["alloc"] }
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
rocksdb = "0.18.0"
hex = "0.4.3"
async-trait = "0.1.53"
serde_with = { version = "1.13.0", features = ["hex"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["time", "registry", "env-filter"] }
serde-value = "0.7.0"
serde-name = "0.2.0"
dirs = "4.0.0"
clap = { version = "3.1.14", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
telemetry_subscribers = { git = "https://github.com/MystenLabs/mysten-infra", rev = "d2976a45420147ad821baae96e6fe4b12215f743" }

bcs = "0.1.3"
sui-faucet = { path = "../faucet" }
sui = { path = "../sui" }
sui_core = { path = "../sui_core" }
sui-adapter = { path = "../sui_programmability/adapter" }
sui-framework = { path = "../sui_programmability/framework" }
sui-network = { path = "../crates/sui-network" }
sui-types = { path = "../sui_types" }
sui-verifier = { path = "../sui_programmability/verifier" }
sui-open-rpc = { path = "../sui/open_rpc" }
sui-open-rpc-macros = { path = "../sui/open_rpc/macros" }

rustyline = "9.1.2"
rustyline-derive = "0.6.0"
colored = "2.0.0"
unescape = "0.1.0"



[[bin]]
name = "sui-e2e-test"
path = "src/bin/e2e_test.rs"
